Fixed vertical align of my hang section

--- a/WP_Saint_Leon_Art/wp-content/themes/saintleonart/src/sass/pages/_pages.contact.scss
+++ b/WP_Saint_Leon_Art/wp-content/themes/saintleonart/src/sass/pages/_pages.contact.scss
@@ -55,6 +55,9 @@
                             &:first-of-type{
                                 margin-top: 41px;
                             }
+                            &:last-of-type{
+                                margin-bottom: 26px;
+                            }
                             svg{
                                 width: 30px;
                                 fill: $black;
@@ -65,6 +68,7 @@
                                 width: 205px;
                                 display: inline-block;
                                 margin: 0 0 0 $igsu;
+                                vertical-align: top;
                             }
                             &:nth-of-type(2){
                                 margin: $igsus 0;
